# uCPort

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  beautify.sh
include/port_stm8/: stm8_device.h
include/port_stm8/impl/: stm8_device_exit.h  stm8_device_humidity.h  stm8_device_led.h  stm8_device_light.h  stm8_device_motor.h  stm8_device_temperature.h  stm8_device_time.h  stm8s_conf.h  stm8s_it.h
include/port_test/: test_device.h
src/port_stm8/: stm8_device.c  stm8_device_exit.c  stm8_device_humidity.c  stm8_device_led.c  stm8_device_light.c  stm8_device_motor.c  stm8_device_temperature.c  stm8_device_time.c  stm8s_it.c
src/port_test/: test_device.c
